--- a/index_japanese.html
+++ b/index_japanese.html
@@ -34,7 +34,7 @@
     </div>
   </center>
 
-  <h1>🇯🇵</h1>
+  <center><h1>🇯🇵</h1></center>
 
   <script src="javascript_japanese.js" charset="utf-8"></script>
 
