--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <center>
-    <a href="index_japanese.html">日本語🇯🇵</a> <a href="index_chinese.html">中文🇨🇳</a> <a href="index_russian.html">PУССКИЙ🇷🇺</a>
+    <a href="index_japanese.html">🇯🇵日本語 </a> <a href="index_chinese.html">🇨🇳中文 </a> <a href="index_russian.html">🇷🇺PУС </a>
     <div class="container">
       
 
