--- a/index_chinese.html
+++ b/index_chinese.html
@@ -11,7 +11,7 @@
 
 <body>
   <center>
-    <a href="index.html">ENGLISH🇬🇧</a> <a href="index_japanese.html">日本語🇯🇵</a> <a href="index_russian.html">PУССКИЙ🇷🇺</a> 
+    <a href="index.html">🇬🇧ENG🇬</a> <a href="index_japanese.html">🇯🇵日本語🇯</a> <a href="index_russian.html">🇷🇺PУС </a> 
     <div class="container">
        
       <button class="button" value="PLAY AGAIN!" onclick="location.href = 'index_chinese.html'" </button>
